# homework

./: .gitignore
ada/: README.md
ada/solution/: my_calendar.adb
book/Principles of Mathematical Analysis/: README.md  main.tex
book/Principles of Mathematical Analysis/Chapter01/: ex05.tex  ex12.tex  ex13.tex
book/Principles of Mathematical Analysis/Chapter02/: ex01.tex  ex02.tex  ex03.tex  ex04.tex
cmu-10-414-dl-systems/: .gitignore  main.py  pyproject.toml
cmu-10-414-dl-systems/hw0/: hw0.ipynb
cmu-10-414-dl-systems/hw0/src/: simple_ml.py  simple_ml_ext.cpp
ocaml/micro-ocaml-interpreter/src/: eval.ml  lexer.ml  parser.ml
ocaml/micro-ocaml-interpreter/test/student/: student.ml
ocaml/micro-ocaml-optimizer-type-checker/src/: optimize.ml  typecheck.ml
ocaml/regex-engine/: .submit
ocaml/regex-engine/src/: a.txt  nfa.ml  regexp.ml
ocaml/regex-engine/test/student/: student.ml
racket/num_as_ds/list_rep_num/: README.md  info.rkt  lib.rkt
